== 1.0.0 The Big release
 * Add --no-epoll option to disable epoll usage on Linux [#61 state:resolved]
 * Add --force (-f) option to force stopping of a daemonized server [#72 state:resolved]
 * Update halycon adapter loader [mtodd]

== 0.8.2 Double Margarita release
 * Require EventMachine 0.12.0
 * [bug] Fix timeout handling when running command
 * [bug] Fix hanging when restarting and no process is running in single server move, fixes #67
 * Added Mack adapter [markbates]
 * Allow rackup .rb files by getting a conventionally named constant as the app [bmizerany]

== 0.8.1 Rebel Porpoise release
 * [bug] Rescue all types of errors when processing request, fixes #62
 * [bug] Use Swiftiply backend when -y option is specified, fixes #63 and #64
 * Allow passing port as a string in Server.new
 * Define deferred?(env) in your Rack application to set if a request is handled in a
	 thread (return true) or not (return false).

== 0.8.0 Dodgy Dentist release
 * [bug] Fix server crash when header too large.
 * Add --require (-r) option to require a library, before executing your script.
 * Rename --rackup short option to -R, warn and load as rackup when file ends with .ru.
 * List supported adapters in command usage.
 * Add file adapter to built-in adapter, serve static files in current directory.
 * Allow disabling signal handling in Server with :signals => false
 * Make Server.new arguments more flexible, can now specify any of host, port, app or hash options.
 * Add --backend option to specified which backend to use, closes #55
 * [bug] Serve static file only on GET and HEAD requests in Rails adapter, fixes #58
 * Add threaded option to run server in threaded mode, calling the application in a
   thread allowing for concurrency in the Rack adapter, closes #46
 * Guess which adapter to use from directory (chdir option)
   or use specified one in 'adapter' option, re #47.

== 0.7.1 Fancy Pants release
 * Clean stale PID files when starting as daemon, fixes #53 [Chu Yeow]